[project]
name = "projecta2a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=1.0.2",
    "a2a-sdk[http-server]>=1.0.2",
    "uvicorn>=0.34.0",
    "langchain>=1.2.11",
    "langchain-core>=1.4.0",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.2.0",
    "python-dotenv>=1.2.2",
    "crewai>=1.14.4",
    "google-adk>=1.0.0",
]
